--- a/css/selector.css
+++ b/css/selector.css
@@ -5,17 +5,24 @@ div.selector {
     border: 2px solid #333333;
     padding-left: 3%;
     padding-right: 3%;
-    margin: 2%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    margin-left: 2%;
+    margin-right: 2%;
 }
 
 div.selectorButtonContainer {
-    display: table-cell;
+    display: inline-block;
     width: 120px;
+    margin: 0;
+    padding-right: 0.5em;
 }
 
-span.selector {
+div.selectorPropertyContainer {
+    font-size: 11pt;
     display: table-cell;
-    padding-right: 1em;
-    padding-bottom: 0.4em;
-    padding-top: 0.4em;
+    vertical-align: middle;
+    width: 250px;
+    margin: 0;
+    padding: 0;
 }
